--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.8'
+          cache: 'pip'
+          cache-dependency-path: 'setup.py'
 
       - name: Compute version
         id: version
